--- a/css/list.css
+++ b/css/list.css
@@ -39,20 +39,21 @@ h2.site_domain {
 #subNav {
   margin-left: 50px;
   margin-right: 50px;
-  height: 100px
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 #subNav p {
   font-size: 2.5vw;
   color: #fff;
-  float: left;
-
+  margin: 0;
+  order: 2;
 }
 #subNav a {
-  margin-top: 30px;
   font-size: 2vw;
-  float: right;
   color: #ffffff;
-
+  order: 1;
   padding: 10px;
   padding-left: 20px;
   padding-right: 20px;
